@@ -40,6 +40,9 @@ ifdef(`DARWIN',,`
 define(`r2',`r31')')		C FIXME!
 
 ASM_START()
+
+EXTERN_FUNC(mpn_invert_limb)
+
 PROLOGUE(mpn_divrem_2)
 	mflr	r0
 	std	r23, -72(r1)
